--- a/gddc.html
+++ b/gddc.html
@@ -12,8 +12,8 @@
     <link rel="icon" type="image/png" sizes="192x192" href="assets/img/global/android-chrome-192x192.png">
     <link rel="icon" type="image/png" sizes="512x512" href="assets/img/global/android-chrome-512x512.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kaushan+Script">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700&amp;display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kaushan+Script&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bitter:400,700">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Major+Mono+Display">
@@ -21,13 +21,29 @@
     <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css">
-    <link rel="stylesheet" href="assets/css/styles.min.css">
+    <link rel="stylesheet" href="assets/css/Article-Clean.css">
+    <link rel="stylesheet" href="assets/css/Brands.css">
+    <link rel="stylesheet" href="assets/css/Button-Outlines---Pretty-1.css">
+    <link rel="stylesheet" href="assets/css/Button-Outlines---Pretty.css">
+    <link rel="stylesheet" href="assets/css/Contact-Form-Clean.css">
+    <link rel="stylesheet" href="assets/css/Diagonal-div-section.css">
+    <link rel="stylesheet" href="assets/css/Features-Boxed.css">
+    <link rel="stylesheet" href="assets/css/fullscreensplit.css">
+    <link rel="stylesheet" href="assets/css/Header-Blue.css">
+    <link rel="stylesheet" href="assets/css/Header-Dark-1.css">
+    <link rel="stylesheet" href="assets/css/Header-Dark.css">
+    <link rel="stylesheet" href="assets/css/Highlight-Clean.css">
+    <link rel="stylesheet" href="assets/css/Landing-Page---Parallax-Background---Logo-Heading-ButtonGIF-1.css">
+    <link rel="stylesheet" href="assets/css/Landing-Page---Parallax-Background---Logo-Heading-ButtonGIF.css">
+    <link rel="stylesheet" href="assets/css/Login-Form-Clean.css">
+    <link rel="stylesheet" href="assets/css/Navigation-Clean.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
     <nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-dark" id="mainNav">
-        <div class="container"><a class="navbar-brand" href="index.html">&nbsp;Cyber Defense Organization</a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler navbar-toggler-right" type="button" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-bars"></i></button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
+        <div class="container"><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler navbar-toggler-right" type="button" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-bars"></i></button>
+            <div class="collapse navbar-collapse" id="navbarResponsive"><a href='index.html'><img src="assets/img/48263753.png" width="92" height="92"/></a>
                 <ul class="navbar-nav ml-auto text-uppercase">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="teams.html">Teams</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="gddc.html">GDDC</a></li>
@@ -74,8 +90,8 @@
                         <li class="list-inline-item"><a href="https://twitter.com/ualbanycdo"><i class="fa fa-twitter"></i></a></li>
                         <li class="list-inline-item"><a href="https://instagram.com/ualbany_cdo"><i class="fa fa-instagram"></i></a></li>
                         <li class="list-inline-item"><a href="https://www.twitch.tv/uacyberdef"><i class="fa fa-twitch"></i></a></li>
-                        <li class="list-inline-item"><a href="https://discord.gg/FV9mGbT"><i class="fab fa-discord"></i></a></li>
-                        <li class="list-inline-item"><a href="https://github.com/cyber-defense-organization"><i class="fab fa-github"></i></a></li>
+                        <li class="list-inline-item"><a href="https://discord.uacyber.org"><i class="fab fa-discord"></i></a></li>
+                        <li class="list-inline-item"><a href="https://github.com/CyberDefenseOrganization"><i class="fab fa-github"></i></a></li>
                     </ul>
                 </div>
             </div>
@@ -84,7 +100,7 @@
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-    <script src="assets/js/script.min.js"></script>
+    <script src="assets/js/agency.js"></script>
 </body>
 
 </html>
