--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             </div>
             <div class="row text-center">
                 <div class="col-md-4"><span class="fa-stack fa-4x"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fas fa-tasks fa-stack-1x fa-inverse"></i></span>
-                    <h4 class="section-heading">Interactive Workshops</h4>
+                    <h4 class="section-heading">Beginner Workshops</h4>
                     <p class="text-muted">Our organization holds weekly workshops during the semester to teach members new things in the security industry.</p>
                 </div>
                 <div class="col-md-4"><span class="fa-stack fa-4x"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fas fa-users fa-stack-1x fa-inverse"></i></span>
