--- a/about.html
+++ b/about.html
@@ -59,69 +59,31 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-4">
-                    <div class="team-member"><img class="rounded-circle mx-auto" src="assets/img/about/kirby.webp">
-                        <h4>Max Kirby</h4>
+                    <div class="team-member"><img class="rounded-circle mx-auto" src="assets/img/about/clark.webp">
+                        <h4>Collin Clark</h4>
                         <p class="text-muted">President</p>
                         <ul class="list-inline social-buttons">
                             <li class="list-inline-item"><a href="#"><i class="fa fa-twitter"></i></a></li>
-                            <li class="list-inline-item"><a href="#"><i class="fa fa-facebook"></i></a></li>
-                            <li class="list-inline-item"><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                            <li class="list-inline-item"><a href="https://www.linkedin.com/in/collin-j-clark/"><i class="fa fa-linkedin"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="team-member"><img class="rounded-circle mx-auto" src="assets/img/about/mikea.jpeg">
+                        <h4>Michalis Antoniades</h4>
+                        <p class="text-muted">Vice President | Red Team Captain</p>
+                        <ul class="list-inline social-buttons">
+                            <li class="list-inline-item"><a href="https://github.com/dest-3"><i class="fa fa-github"></i></a></li>
+                            <li class="list-inline-item"><a href="https://www.linkedin.com/in/mantoniades/"><i class="fa fa-linkedin"></i></a></li>
                         </ul>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member"><img class="rounded-circle mx-auto" src="assets/img/about/placeholder.png">
-                        <h4>Michalis Antoniades</h4>
-                        <p class="text-muted">Vice President</p>
-                        <ul class="list-inline social-buttons">
-                            <li class="list-inline-item"><a href="#"><i class="fa fa-twitter"></i></a></li>
-                            <li class="list-inline-item"><a href="#"><i class="fa fa-facebook"></i></a></li>
-                            <li class="list-inline-item"><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-sm-4">
-                    <div class="team-member"><img class="rounded-circle mx-auto" src="assets/img/about/raiola.webp">
-                        <h4>Alex Raiola</h4>
-                        <p class="text-muted">Secretary</p>
-                        <ul class="list-inline social-buttons">
-                            <li class="list-inline-item"><a href="#"><i class="fa fa-twitter"></i></a></li>
-                            <li class="list-inline-item"><a href="#"><i class="fa fa-facebook"></i></a></li>
-                            <li class="list-inline-item"><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-4">
-                    <div class="team-member"><img class="rounded-circle mx-auto" src="assets/img/about/ramjisingh.jpg">
-                        <h4>Jivan RamjiSingh</h4>
-                        <p class="text-muted">Treasurer</p>
-                        <ul class="list-inline social-buttons">
-                            <li class="list-inline-item"><a href="https://twitter.com/Jivan_20"><i class="fa fa-twitter"></i></a></li>
-                            <li class="list-inline-item"><a href="https://github.com/jivandabeast"><i class="fa fa-github"></i></a></li>
-                            <li class="list-inline-item"><a href="https://www.linkedin.com/in/jivanramjisingh/"><i class="fa fa-linkedin"></i></a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-sm-4">
-                    <div class="team-member"><img class="rounded-circle mx-auto" src="assets/img/about/clark.webp">
-                        <h4>Collin Clark</h4>
+                        <h4>Michael Desocio</h4>
                         <p class="text-muted">Chief Technology Officer</p>
                         <ul class="list-inline social-buttons">
                             <li class="list-inline-item"><a href="#"><i class="fa fa-twitter"></i></a></li>
-                            <li class="list-inline-item"><a href="#"><i class="fa fa-facebook"></i></a></li>
-                            <li class="list-inline-item"><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-sm-4">
-                    <div class="team-member"><img class="rounded-circle mx-auto" src="assets/img/about/kinsey.webp">
-                        <h4>Daunte Kinsey</h4>
-                        <p class="text-muted">Blue Competition Team Captain</p>
-                        <ul class="list-inline social-buttons">
-                            <li class="list-inline-item"><a href="#"><i class="fa fa-twitter"></i></a></li>
-                            <li class="list-inline-item"><a href="#"><i class="fa fa-facebook"></i></a></li>
                             <li class="list-inline-item"><a href="#"><i class="fa fa-linkedin"></i></a></li>
                         </ul>
                     </div>
@@ -129,37 +91,77 @@
             </div>
             <div class="row">
                 <div class="col-sm-4">
-                    <div class="team-member"><img class="rounded-circle mx-auto" src="assets/img/about/salvatore.webp">
-                        <h4>Jenna Salvatore</h4>
-                        <p class="text-muted">Blue Competition Team Co-Captain</p>
+                    <div class="team-member"><img class="rounded-circle mx-auto" src="assets/img/about/placeholder.png">
+                        <h4>Liam Mengler</h4>
+                        <p class="text-muted">Chief Technology Officer</p>
                         <ul class="list-inline social-buttons">
                             <li class="list-inline-item"><a href="#"><i class="fa fa-twitter"></i></a></li>
-                            <li class="list-inline-item"><a href="#"><i class="fa fa-facebook"></i></a></li>
-                            <li class="list-inline-item"><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                            <li class="list-inline-item"><a href="https://www.linkedin.com/in/lmengler/"><i class="fa fa-linkedin"></i></a></li>
                         </ul>
                     </div>
                 </div>
                 <div class="col-sm-4">
-                    <div class="team-member"><img class="rounded-circle mx-auto" src="assets/img/about/karger.webp">
-                        <h4>Raphael Karger</h4>
-                        <p class="text-muted">Red Competition Team Captain</p>
+                    <div class="team-member"><img class="rounded-circle mx-auto" src="assets/img/about/placeholder.png">
+                        <h4>Samantha Solanto</h4>
+                        <p class="text-muted">Secretary</p>
                         <ul class="list-inline social-buttons">
                             <li class="list-inline-item"><a href="#"><i class="fa fa-twitter"></i></a></li>
-                            <li class="list-inline-item"><a href="#"><i class="fa fa-facebook"></i></a></li>
                             <li class="list-inline-item"><a href="#"><i class="fa fa-linkedin"></i></a></li>
                         </ul>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member"><img class="rounded-circle mx-auto" src="assets/img/about/placeholder.png">
-                        <h4>Michalis Antoniades</h4>
-                        <p class="text-muted">Red Competition Team Co-Captain</p>
+                        <h4>Shoshanna Kusa</h4>
+                        <p class="text-muted">Treasurer</p>
                         <ul class="list-inline social-buttons">
                             <li class="list-inline-item"><a href="#"><i class="fa fa-twitter"></i></a></li>
-                            <li class="list-inline-item"><a href="#"><i class="fa fa-facebook"></i></a></li>
+                            <li class="list-inline-item"><a href="https://www.linkedin.com/in/shoshanna-kusa/"><i class="fa fa-linkedin"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="col-sm-4">
+                    <div class="team-member"><img class="rounded-circle mx-auto" src="assets/img/about/placeholder.png">
+                        <h4>Tiffany Wang</h4>
+                        <p class="text-muted">Marketing Officer</p>
+                        <ul class="list-inline social-buttons">
+                            <li class="list-inline-item"><a href="#"><i class="fa fa-twitter"></i></a></li>
                             <li class="list-inline-item"><a href="#"><i class="fa fa-linkedin"></i></a></li>
                         </ul>
                     </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="team-member"><img class="rounded-circle mx-auto" src="assets/img/about/placeholder.png">
+                        <h4>Jacob Booth</h4>
+                        <p class="text-muted">Blue Team Captain</p>
+                        <ul class="list-inline social-buttons">
+                            <li class="list-inline-item"><a href="#"><i class="fa fa-twitter"></i></a></li>
+                            <li class="list-inline-item"><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="team-member"><img class="rounded-circle mx-auto" src="assets/img/about/placeholder.png">
+                        <h4>Nisanth Nadimpalli</h4>
+                        <p class="text-muted">Red Team Co-Captain</p>
+                        <ul class="list-inline social-buttons">
+                            <li class="list-inline-item"><a href="#"><i class="fa fa-twitter"></i></a></li>
+                            <li class="list-inline-item"><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+
+            <div class="col-sm-4">
+                <div class="team-member"><img class="rounded-circle mx-auto" src="assets/img/about/placeholder.png">
+                    <h4>Michael Fields</h4>
+                    <p class="text-muted">Server Committee Lead</p>
+                    <ul class="list-inline social-buttons">
+                        <li class="list-inline-item"><a href="#"><i class="fa fa-twitter"></i></a></li>
+                        <li class="list-inline-item"><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                    </ul>
                 </div>
             </div>
         </div>
