--- a/gddc.html
+++ b/gddc.html
@@ -62,8 +62,9 @@
         <div class="container hero">
             <div class="row">
                 <div class="col-12 col-lg-6 col-xl-5 offset-xl-1">
-                    <h1>The Great Dane Defense Competition</h1>
-                    <p>The first of its kind hosted by our organization, the Great Dane Defense Competition is a red vs. blue competition.</p><a class="btn btn-light btn-lg action-button" role="button" href="contact.html">Learn More</a>
+                    <h1>GDDC</h1>
+                    <p>
+                        The Great Dane Defense Competition (GDDC) is a defensive security competition hosted by UAlbany CDO. Competitors operate a simulated environment and defend against red-team adversaries attempting to hinder their operations and maintain persistence. Competitors are also required to complete tasks throughout the competition that reflect real-world business operations.</p><a class="btn btn-light btn-lg action-button" role="button" href="contact.html">Learn More</a>
                 </div>
                 <div class="col-md-5 col-lg-5 offset-lg-1 offset-xl-0 d-none d-lg-block phone-holder">
                     <div class="phone-mockup"><img class="device" src="assets/img/gddc/phone.svg">
