--- a/about.html
+++ b/about.html
@@ -101,7 +101,7 @@
                     </div>
                 </div>
                 <div class="col-sm-4">
-                    <div class="team-member"><img class="rounded-circle mx-auto" src="assets/img/about/placeholder.png">
+                    <div class="team-member"><img class="rounded-circle mx-auto" src="assets/img/about/samantha.jpg">
                         <h4>Samantha Solanto</h4>
                         <p class="text-muted">Secretary</p>
                         <ul class="list-inline social-buttons">
