--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,12 @@
         </div>
     </nav>
     <section class="contact-clean">
-        <iframe width="640px" height="480px" src="https://forms.office.com/r/S0rHmkBtm1?embed=true" frameborder="0" marginwidth="0" marginheight="0" style="border: none; max-width:100%; max-height:100vh" allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen> </iframe>
+        <!-- Added contact office form to site and centered -->
+        <div display="flex" align-items="center" justify-content="center">
+            <iframe width="640px" height="480px" src="https://forms.office.com/r/S0rHmkBtm1?embed=true" frameborder="0" marginwidth="0" marginheight="0" style="border: none; max-width:100%; max-height:100vh" allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen>
+            </iframe>
+        </div>
+        
     </section>
     <footer>
         <div class="container">
