Update MikeD and Fixing Contact Form Placement

--- a/about.html
+++ b/about.html
@@ -79,12 +79,12 @@
                     </div>
                 </div>
                 <div class="col-sm-4">
-                    <div class="team-member"><img class="rounded-circle mx-auto" src="assets/img/about/placeholder.png">
-                        <h4>Michael Desocio</h4>
+                    <div class="team-member"><img class="rounded-circle mx-auto" src="assets/img/about/MikeD.jpg">
+                        <h4>Michael DeSocio</h4>
                         <p class="text-muted">Chief Technology Officer</p>
                         <ul class="list-inline social-buttons">
-                            <li class="list-inline-item"><a href="#"><i class="fa fa-twitter"></i></a></li>
-                            <li class="list-inline-item"><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                            <li class="list-inline-item"><a href="https://mdesocio.com"><i class="fa fa-user"></i></a></li>
+                            <li class="list-inline-item"><a href="https://www.linkedin.com/in/michael-desocio-bass/"><i class="fa fa-linkedin"></i></a></li>
                         </ul>
                     </div>
                 </div>
@@ -123,7 +123,7 @@
 
                 <div class="col-sm-4">
                     <div class="team-member"><img class="rounded-circle mx-auto" src="assets/img/about/tiffany.png">
-                        <h4>Tiffany Wang</h4>
+                        <h4>Tiffany Yang</h4>
                         <p class="text-muted">Marketing Officer</p>
                         <ul class="list-inline social-buttons">
                             <li class="list-inline-item"><a href="#"><i class="fa fa-twitter"></i></a></li>
