--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
             </div>
         </div>
     </nav>
-    <section class="contact-clean">
+    <section>
         <!-- Added contact office form to site and centered -->
         <div display="flex" align-items="center" justify-content="center">
             <iframe width="640px" height="480px" src="https://forms.office.com/r/S0rHmkBtm1?embed=true" frameborder="0" marginwidth="0" marginheight="0" style="border: none; max-width:100%; max-height:100vh" allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen>
