--- a/contact.html
+++ b/contact.html
@@ -57,11 +57,8 @@
     </nav>
     <section>
         <!-- Added contact office form to site and centered -->
-        <div display="flex" align-items="center" justify-content="center">
-            <iframe width="640px" height="480px" src="https://forms.office.com/r/S0rHmkBtm1?embed=true" frameborder="0" marginwidth="0" marginheight="0" style="border: none; max-width:100%; max-height:100vh" allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen>
-            </iframe>
-        </div>
-        
+            <iframe width="640px" height="480px" src="https://forms.office.com/r/S0rHmkBtm1?embed=true" frameborder="0" marginwidth="0" marginheight="0" style="border: none; max-width:100%; max-height:100vh" allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen display="flex" align-items="center" justify-content="center">
+            </iframe>        
     </section>
     <footer>
         <div class="container">
