--- a/contact.html
+++ b/contact.html
@@ -55,9 +55,9 @@
             </div>
         </div>
     </nav>
-    <section>
+    <section class="contact-clean">
         <!-- Added contact office form to site and centered -->
-            <iframe width="640px" height="480px" src="https://forms.office.com/r/S0rHmkBtm1?embed=true" frameborder="0" marginwidth="0" marginheight="0" style="border: none; max-width:100%; max-height:100vh" allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen display="flex" align-items="center" justify-content="center">
+            <iframe width="640px" height="480px" src="https://forms.office.com/r/S0rHmkBtm1?embed=true" frameborder="0" marginwidth="0" marginheight="0" style="border: none; max-width:100%; max-height:100vh" allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen>
             </iframe>        
     </section>
     <footer>
