--- a/contact.html
+++ b/contact.html
@@ -56,10 +56,12 @@
         </div>
     </nav>
      <!-- Added contact office form to site and centered -->
-    <section class="contact-clean">
+    <center>
+        <section class="contact-clean">
             <iframe width="640px" height="480px" src="https://forms.office.com/r/S0rHmkBtm1?embed=true" frameborder="0" marginwidth="0" marginheight="0" style="border: none; max-width:100%; max-height:100vh" allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen>
             </iframe>        
-    </section>
+        </section>
+    </center>
     <footer>
         <div class="container">
             <div class="row">
