--- a/about.html
+++ b/about.html
@@ -73,6 +73,7 @@
                         <h4>Michalis Antoniades</h4>
                         <p class="text-muted">Vice President | Red Team Captain</p>
                         <ul class="list-inline social-buttons">
+                            <li class="list-inline-item"><a href="https://dest-3.github.io"><i class="fa fa-user"></i></a></li>
                             <li class="list-inline-item"><a href="https://github.com/dest-3"><i class="fa fa-github"></i></a></li>
                             <li class="list-inline-item"><a href="https://www.linkedin.com/in/mantoniades/"><i class="fa fa-linkedin"></i></a></li>
                         </ul>
