added discord embed

--- a/index.html
+++ b/index.html
@@ -89,6 +89,11 @@
                 </div>
             </div>
         </div>
+        <div>
+            <center>
+                <iframe src="https://discord.com/widget?id=674059098693566485&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+            </center>
+        </div>
     </section>
     <footer>
         <div class="container">
