--- a/events.html
+++ b/events.html
@@ -57,7 +57,7 @@
     </nav>
     <section id="page-content"><div id="event-calendar">
     <center>
-        <iframe src="https://calendar.google.com/calendar/embed?src=uacyberdefenseorg%40gmail.com&ctz=America%2FNew_York" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+        <iframe src="https://calendar.google.com/calendar/embed?src=naupvi56vlaqe4avksmoftuslsst1s2l%40import.calendar.google.com&ctz=America%2FNew_York" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
     </center>
 </div></section>
     <footer>
