--- a/alumni.html
+++ b/alumni.html
@@ -56,11 +56,41 @@
             </div>
         </div>
     </nav>
-    <section id="page-content"><div id="event-calendar">
-    <center>
-        <iframe src="https://calendar.google.com/calendar/embed?src=uacyberdefenseorg%40gmail.com&ctz=America%2FNew_York" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
-    </center>
-</div></section>
+    <section class="bg-light" id="team">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="team-member"><img class="rounded-circle mx-auto" src="assets/img/about/clark.webp">
+                        <h4>Collin Clark</h4>
+                        <p class="text-muted">President - 2022-2023</p>
+                        <ul class="list-inline social-buttons">
+                            <li class="list-inline-item"><a href="#"><i class="fa fa-twitter"></i></a></li>
+                            <li class="list-inline-item"><a href="https://www.linkedin.com/in/collin-j-clark/"><i class="fa fa-linkedin"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="team-member"><img class="rounded-circle mx-auto" src="assets/img/about/mikea.jpeg">
+                        <h4>Michalis Antoniades</h4>
+                        <p class="text-muted">Vice President | Red Team Captain - 2021-2023</p>
+                        <ul class="list-inline social-buttons">
+                            <li class="list-inline-item"><a href="https://dest-3.github.io"><i class="fa fa-user"></i></a></li>
+                            <li class="list-inline-item"><a href="https://github.com/dest-3"><i class="fa fa-github"></i></a></li>
+                            <li class="list-inline-item"><a href="https://www.linkedin.com/in/mantoniades/"><i class="fa fa-linkedin"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="team-member"><img class="rounded-circle mx-auto" src="assets/img/about/placeholder.png">
+                    <h4>Michael Fields</h4>
+                    <p class="text-muted">Server Committee Lead - 2022-2023</p>
+                    <ul class="list-inline social-buttons">
+                        <li class="list-inline-item"><a href="#"><i class="fa fa-twitter"></i></a></li>
+                        <li class="list-inline-item"><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
     <footer>
         <div class="container">
             <div class="row">
