--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="resources.html">Resources</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="events.html">Events</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="about.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="alumni.html">Alumni</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="contact.html">Contact</a></li>
                 </ul>
             </div>
