--- a/about.html
+++ b/about.html
@@ -58,47 +58,32 @@
     </nav>
     <section class="bg-light" id="team">
         <div class="container">
+            <div class="intro">
+                <h2 class="text-center">EBoard Members</h2>
+                <p class="text-center">This is the current EBoard for the Cyber Defense Organzation at the University at Albany, SUNY!</p>
+             </div>
+        </div>
+        <div class="container">
             <div class="row">
                 <div class="col-sm-4">
-                    <div class="team-member"><img class="rounded-circle mx-auto" src="assets/img/about/clark.webp">
-                        <h4>Collin Clark</h4>
+                    <div class="team-member"><img class="rounded-circle mx-auto" src="assets/img/about/placeholder.png">
+                        <h4>Liam Mengler</h4>
                         <p class="text-muted">President</p>
                         <ul class="list-inline social-buttons">
+                            <li class="list-inline-item"><a href="mailto:lmengler@uacyber.org"><i class="fa fa-envelope"></i></a></li>
                             <li class="list-inline-item"><a href="#"><i class="fa fa-twitter"></i></a></li>
-                            <li class="list-inline-item"><a href="https://www.linkedin.com/in/collin-j-clark/"><i class="fa fa-linkedin"></i></a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-sm-4">
-                    <div class="team-member"><img class="rounded-circle mx-auto" src="assets/img/about/mikea.jpeg">
-                        <h4>Michalis Antoniades</h4>
-                        <p class="text-muted">Vice President | Red Team Captain</p>
-                        <ul class="list-inline social-buttons">
-                            <li class="list-inline-item"><a href="https://dest-3.github.io"><i class="fa fa-user"></i></a></li>
-                            <li class="list-inline-item"><a href="https://github.com/dest-3"><i class="fa fa-github"></i></a></li>
-                            <li class="list-inline-item"><a href="https://www.linkedin.com/in/mantoniades/"><i class="fa fa-linkedin"></i></a></li>
+                            <li class="list-inline-item"><a href="https://www.linkedin.com/in/lmengler/"><i class="fa fa-linkedin"></i></a></li>
                         </ul>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member"><img class="rounded-circle mx-auto" src="assets/img/about/MikeD.jpg">
                         <h4>Michael DeSocio</h4>
-                        <p class="text-muted">Chief Technology Officer</p>
+                        <p class="text-muted">Vice President</p>
                         <ul class="list-inline social-buttons">
+                            <li class="list-inline-item"><a href="mailto:mdesocio@uacyber.org"><i class="fa fa-envelope"></i></a></li>
                             <li class="list-inline-item"><a href="https://mdesocio.com"><i class="fa fa-user"></i></a></li>
                             <li class="list-inline-item"><a href="https://www.linkedin.com/in/michael-desocio-bass/"><i class="fa fa-linkedin"></i></a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-4">
-                    <div class="team-member"><img class="rounded-circle mx-auto" src="assets/img/about/placeholder.png">
-                        <h4>Liam Mengler</h4>
-                        <p class="text-muted">Chief Technology Officer</p>
-                        <ul class="list-inline social-buttons">
-                            <li class="list-inline-item"><a href="#"><i class="fa fa-twitter"></i></a></li>
-                            <li class="list-inline-item"><a href="https://www.linkedin.com/in/lmengler/"><i class="fa fa-linkedin"></i></a></li>
                         </ul>
                     </div>
                 </div>
@@ -107,47 +92,7 @@
                         <h4>Samantha Solanto</h4>
                         <p class="text-muted">Secretary</p>
                         <ul class="list-inline social-buttons">
-                            <li class="list-inline-item"><a href="#"><i class="fa fa-twitter"></i></a></li>
-                            <li class="list-inline-item"><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-sm-4">
-                    <div class="team-member"><img class="rounded-circle mx-auto" src="assets/img/about/placeholder.png">
-                        <h4>Shoshanna Kusa</h4>
-                        <p class="text-muted">Treasurer</p>
-                        <ul class="list-inline social-buttons">
-                            <li class="list-inline-item"><a href="#"><i class="fa fa-twitter"></i></a></li>
-                            <li class="list-inline-item"><a href="https://www.linkedin.com/in/shoshanna-kusa/"><i class="fa fa-linkedin"></i></a></li>
-                        </ul>
-                    </div>
-                </div>
-
-                <div class="col-sm-4">
-                    <div class="team-member"><img class="rounded-circle mx-auto" src="assets/img/about/tiffany.png">
-                        <h4>Tiffany Yang</h4>
-                        <p class="text-muted">Marketing Officer</p>
-                        <ul class="list-inline social-buttons">
-                            <li class="list-inline-item"><a href="#"><i class="fa fa-twitter"></i></a></li>
-                            <li class="list-inline-item"><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-sm-4">
-                    <div class="team-member"><img class="rounded-circle mx-auto" src="assets/img/about/placeholder.png">
-                        <h4>Jacob Booth</h4>
-                        <p class="text-muted">Blue Team Captain</p>
-                        <ul class="list-inline social-buttons">
-                            <li class="list-inline-item"><a href="#"><i class="fa fa-twitter"></i></a></li>
-                            <li class="list-inline-item"><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-sm-4">
-                    <div class="team-member"><img class="rounded-circle mx-auto" src="assets/img/about/placeholder.png">
-                        <h4>Nisanth Nadimpalli</h4>
-                        <p class="text-muted">Red Team Co-Captain</p>
-                        <ul class="list-inline social-buttons">
+                            <li class="list-inline-item"><a href="mailto:ssolanto@uacyber.org"><i class="fa fa-envelope"></i></a></li>
                             <li class="list-inline-item"><a href="#"><i class="fa fa-twitter"></i></a></li>
                             <li class="list-inline-item"><a href="#"><i class="fa fa-linkedin"></i></a></li>
                         </ul>
@@ -155,17 +100,138 @@
                 </div>
             </div>
             <div class="row">
-
-            <div class="col-sm-4">
-                <div class="team-member"><img class="rounded-circle mx-auto" src="assets/img/about/placeholder.png">
-                    <h4>Michael Fields</h4>
-                    <p class="text-muted">Server Committee Lead</p>
-                    <ul class="list-inline social-buttons">
-                        <li class="list-inline-item"><a href="#"><i class="fa fa-twitter"></i></a></li>
-                        <li class="list-inline-item"><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                    </ul>
+                <div class="col-sm-4">
+                    <div class="team-member"><img class="rounded-circle mx-auto" src="assets/img/about/placeholder.png">
+                        <h4>Shoshanna Kusa</h4>
+                        <p class="text-muted">Treasurer</p>
+                        <ul class="list-inline social-buttons">
+                            <li class="list-inline-item"><a href="mailto:skusa@uacyber.org"><i class="fa fa-envelope"></i></a></li>
+                            <li class="list-inline-item"><a href="#"><i class="fa fa-twitter"></i></a></li>
+                            <li class="list-inline-item"><a href="https://www.linkedin.com/in/shoshanna-kusa/"><i class="fa fa-linkedin"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="team-member"><img class="rounded-circle mx-auto" src="assets/img/about/mikea.jpeg">
+                        <h4>Daniel Andrawis</h4>
+                        <p class="text-muted">Chief Technology Officer</p>
+                        <ul class="list-inline social-buttons">
+                            <li class="list-inline-item"><a href="mailto:dandrawis@uacyber.org"><i class="fa fa-envelope"></i></a></li>
+                            <li class="list-inline-item"><a href="#"><i class="fa fa-twitter"></i></a></li>
+                            <li class="list-inline-item"><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="team-member"><img class="rounded-circle mx-auto" src="assets/img/about/tiffany.png">
+                        <h4>Tiffany Yang</h4>
+                        <p class="text-muted">Marketing Officer</p>
+                        <ul class="list-inline social-buttons">
+                            <li class="list-inline-item"><a href="mailto:tyang@uacyber.org"><i class="fa fa-envelope"></i></a></li>
+                            <li class="list-inline-item"><a href="#"><i class="fa fa-twitter"></i></a></li>
+                            <li class="list-inline-item"><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
+            <div class="intro">
+                <h2 class="text-center">CBoard Members</h2>
+                <p class="text-center">This is the current CBoard for the Cyber Defense Organzation at the University at Albany, SUNY!</p>
+            </div>
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="team-member"><img class="rounded-circle mx-auto" src="assets/img/about/placeholder.png">
+                        <h4>Jason McDonough</h4>
+                        <p class="text-muted">Stack Supervisor</p>
+                        <ul class="list-inline social-buttons">
+                            <li class="list-inline-item"><a href="mailto:jmcdonough@uacyber.org"><i class="fa fa-envelope"></i></a></li>
+                            <li class="list-inline-item"><a href="#"><i class="fa fa-twitter"></i></a></li>
+                            <li class="list-inline-item"><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="team-member"><img class="rounded-circle mx-auto" src="assets/img/about/placeholder.png">
+                        <h4>Anton Marino</h4>
+                        <p class="text-muted">Blue Team Captain</p>
+                        <ul class="list-inline social-buttons">
+                            <li class="list-inline-item"><a href="mailto:amarino@uacyber.org"><i class="fa fa-envelope"></i></a></li>
+                            <li class="list-inline-item"><a href="#"><i class="fa fa-twitter"></i></a></li>
+                            <li class="list-inline-item"><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="team-member"><img class="rounded-circle mx-auto" src="assets/img/about/placeholder.png">
+                        <h4>Thomas Wu</h4>
+                        <p class="text-muted">Blue Team Co-Captain | In-Training Chief Technology Officer</p>
+                        <ul class="list-inline social-buttons">
+                            <li class="list-inline-item"><a href="mailto:twu@uacyber.org"><i class="fa fa-envelope"></i></a></li>
+                            <li class="list-inline-item"><a href="#"><i class="fa fa-twitter"></i></a></li>
+                            <li class="list-inline-item"><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="team-member"><img class="rounded-circle mx-auto" src="assets/img/about/placeholder.png">
+                        <h4>Nisanth Nadimpalli</h4>
+                        <p class="text-muted">Red Team Captain</p>
+                        <ul class="list-inline social-buttons">
+                            <li class="list-inline-item"><a href="mailto:nnadimpalli@uacyber.org"><i class="fa fa-envelope"></i></a></li>
+                            <li class="list-inline-item"><a href="#"><i class="fa fa-twitter"></i></a></li>
+                            <li class="list-inline-item"><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="team-member"><img class="rounded-circle mx-auto" src="assets/img/about/placeholder.png">
+                        <h4>Dylan Tarace</h4>
+                        <p class="text-muted">Red Team Co-Captain</p>
+                        <ul class="list-inline social-buttons">
+                            <li class="list-inline-item"><a href="mailto:dtarace@uacyber.org"><i class="fa fa-envelope"></i></a></li>
+                            <li class="list-inline-item"><a href="#"><i class="fa fa-twitter"></i></a></li>
+                            <li class="list-inline-item"><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="team-member"><img class="rounded-circle mx-auto" src="assets/img/about/placeholder.png">
+                        <h4>Mark Lautenschlager</h4>
+                        <p class="text-muted">In-Training Chief Technology Officer</p>
+                        <ul class="list-inline social-buttons">
+                            <li class="list-inline-item"><a href="mailto:mlautenschlager@uacyber.org"><i class="fa fa-envelope"></i></a></li>
+                            <li class="list-inline-item"><a href="#"><i class="fa fa-twitter"></i></a></li>
+                            <li class="list-inline-item"><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+                <div class="row">
+                    <div class="col-sm-4">
+                        <div class="team-member"><img class="rounded-circle mx-auto" src="assets/img/about/placeholder.png">
+                            <h4>Jacob Booth</h4>
+                            <p class="text-muted">In-Training Chief Technology Officer</p>
+                            <ul class="list-inline social-buttons">
+                                <li class="list-inline-item"><a href="mailto:jbooth@uacyber.org"><i class="fa fa-envelope"></i></a></li>
+                                <li class="list-inline-item"><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                <li class="list-inline-item"><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="team-member"><img class="rounded-circle mx-auto" src="assets/img/about/placeholder.png">
+                            <h4>Richard Kohler</h4>
+                            <p class="text-muted">In-Training Chief Technology Officer</p>
+                            <ul class="list-inline social-buttons">
+                                <li class="list-inline-item"><a href="mailto:rkohler@uacyber.org"><i class="fa fa-envelope"></i></a></li>
+                                <li class="list-inline-item"><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                <li class="list-inline-item"><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>  
         </div>
     </section>
     <footer>
@@ -173,7 +239,7 @@
             <div class="row">
                 <div class="col mx-auto">
                     <ul class="list-inline social-buttons">
-                        <li class="list-inline-item"><a href="https://twitter.com/ualbanycdo"><i class="fa fa-twitter"></i></a></li>
+                        <li class="list-inline-item"><a href="https://twitter.com/ualbany_cdo"><i class="fa fa-twitter"></i></a></li>
                         <li class="list-inline-item"><a href="https://instagram.com/ualbany_cdo"><i class="fa fa-instagram"></i></a></li>
                         <li class="list-inline-item"><a href="https://www.twitch.tv/uacyberdef"><i class="fa fa-twitch"></i></a></li>
                         <li class="list-inline-item"><a href="https://discord.uacyber.org"><i class="fab fa-discord"></i></a></li>
