--- a/about.html
+++ b/about.html
@@ -112,7 +112,7 @@
                     </div>
                 </div>
                 <div class="col-sm-4">
-                    <div class="team-member"><img class="rounded-circle mx-auto" src="assets/img/about/mikea.jpeg">
+                    <div class="team-member"><img class="rounded-circle mx-auto" src="assets/img/about/placeholder.png">
                         <h4>Daniel Andrawis</h4>
                         <p class="text-muted">Chief Technology Officer</p>
                         <ul class="list-inline social-buttons">
