--- a/alumni.html
+++ b/alumni.html
@@ -80,13 +80,16 @@
                         </ul>
                     </div>
                 </div>
-                <div class="team-member"><img class="rounded-circle mx-auto" src="assets/img/about/placeholder.png">
-                    <h4>Michael Fields</h4>
-                    <p class="text-muted">Server Committee Lead - 2022-2023</p>
-                    <ul class="list-inline social-buttons">
-                        <li class="list-inline-item"><a href="#"><i class="fa fa-twitter"></i></a></li>
-                        <li class="list-inline-item"><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                    </ul>
+                <div class="col-sm-4">
+                    <div class="team-member"><img class="rounded-circle mx-auto" src="assets/img/about/placeholder.png">
+                        <h4>Michael Fields</h4>
+                        <p class="text-muted">Server Committee Lead - 2022-2023</p>
+                        <ul class="list-inline social-buttons">
+                            <li class="list-inline-item"><a href="#"><i class="fa fa-twitter"></i></a></li>
+                            <li class="list-inline-item"><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                        </ul>
+                    </div>
+            
                 </div>
             </div>
         </div>
