--- a/alumni.html
+++ b/alumni.html
@@ -81,12 +81,12 @@
                     </div>
                 </div>
                 <div class="col-sm-4">
-                    <div class="team-member"><img class="rounded-circle mx-auto" src="assets/img/about/placeholder.png">
+                    <div class="team-member"><img class="rounded-circle mx-auto" src="assets/img/alumni/mikef.jpg">
                         <h4>Michael Fields</h4>
                         <p class="text-muted">Server Committee Lead - 2022-2023</p>
                         <ul class="list-inline social-buttons">
-                            <li class="list-inline-item"><a href="#"><i class="fa fa-twitter"></i></a></li>
-                            <li class="list-inline-item"><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                            <li class="list-inline-item"><a href="https://mikerfields.github.io/"><i class="fa fa-user"></i></a></li>
+                            <li class="list-inline-item"><a href="https://www.linkedin.com/in/mike-r-fields"><i class="fa fa-linkedin"></i></a></li>
                         </ul>
                     </div>
             
